# scipy

./: .gitignore  .gitmodules  LICENSES_bundled.txt  _distributor_init.py  _distributor_init_local.py  environment.yml  meson.build  pixi.toml  pyproject.toml  pyrefly.toml  pytest.ini  tach.toml
.circleci/: config.yml
.github/: actionlint.yml
.github/workflows/: array_api.yml  asan.yml  circle_artifacts.yml  commit_message.yml  emscripten.yml  gpu-ci.yml  issue-labeler.yml  lint.yml  linux.yml  linux_blas.yml  linux_intel_oneAPI.yml  linux_meson.yml  linux_musl.yml  macos.yml  macos_meson.yml  no-fortran.yml  pixi-packages.yml  pixi.toml  pull-request-labeler.yml  sanitizers.yml  smoke_dependency_upgrades.yml  update_lock_file.yml  wheels.yml  windows.yml
.spin/: cmds.py
benchmarks/benchmarks/: optimize_milp.py  sparse_linalg_solve.py  stats.py
doc/source/: conf.py  index.rst
pixi-packages/emscripten/: pixi.toml
repro/: cython-debug.py
requirements/: openblas.txt  openblas64.txt
scipy/: __init__.py  _distributor_init_local.py  conftest.py  meson.build
scipy/_external/: meson.build
scipy/_lib/: _array_api.py  _elementwise_iterative_method.py  _testutils.py  _util.py  meson.build
scipy/cluster/: hierarchy.py  vq.py
scipy/constants/: __init__.py
scipy/datasets/: _download_all.py  _utils.py
scipy/differentiate/: _differentiate.py
scipy/fft/: _basic.py
scipy/integrate/: _quadrature.py  _tanhsinh.py
scipy/linalg/: _basic.py  (+11 more)
subprojects/array_api_extra/: meson.build
tools/: lint.toml  test.py  vendor_packaging_version.sh  vendor_pyprima.sh
(+209 files in other folders)
