project('array_api_extra')

sources = {
  'array_api_extra': files(
    'array_api_extra/src/array_api_extra/__init__.py',
    'array_api_extra/src/array_api_extra/_delegation.py',
    'array_api_extra/src/array_api_extra/testing.py',
  ),
  'array_api_extra/_lib': files(
    'array_api_extra/src/array_api_extra/_lib/__init__.py',
    'array_api_extra/src/array_api_extra/_lib/_at.py',
    'array_api_extra/src/array_api_extra/_lib/_backends.py',
    'array_api_extra/src/array_api_extra/_lib/_funcs.py',
    'array_api_extra/src/array_api_extra/_lib/_lazy.py',
    'array_api_extra/src/array_api_extra/_lib/_testing.py',
  ),
  'array_api_extra/_lib/_utils': files(
    'array_api_extra/src/array_api_extra/_lib/_utils/__init__.py',
    'array_api_extra/src/array_api_extra/_lib/_utils/_compat.py',
    'array_api_extra/src/array_api_extra/_lib/_utils/_compat.pyi',
    'array_api_extra/src/array_api_extra/_lib/_utils/_helpers.py',
    'array_api_extra/src/array_api_extra/_lib/_utils/_typing.py',
    'array_api_extra/src/array_api_extra/_lib/_utils/_typing.pyi',
  ),
}
